examples/valid/program55.c
int main() {
    int arr[10];
    int i;
    for (i = 0; i < 10; i = i + 1) {
        arr[i] = i * 2;
    }
    return arr[5];
}

