examples/invalid/program42.c
int main() {
    int arr[10];
    arr[10] = 5;
    return 0;
}

